# chat_sphere

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: lint.yml
alembic/: env.py
alembic/versions/: 2025_04_01_1535-12abab91b05e_test.py  2025_04_04_1315-6ff07c80cc3a_add_relationship_between_chats_and_.py  2025_04_04_1810-c56f3c074774_add_unique_constraint_to_groups_title.py
docs/: erd.puml  sd.puml  sequence_diagram.puml
src/: main.py
src/api/v1/: auth.py  chats.py  groups.py  history.py  users.py  websocket.py
src/core/: config.py
src/db/: postgres.py  token_storage.py
src/depends/: dependencies.py
src/managers/: websocket_manager.py
src/models/: entity.py
src/schemas/: entity.py  token.py
src/services/: chats.py  groups.py  history_service.py  messages.py  token_service.py  users.py  users_service.py  websocket.py
utils/: data.py  ws_client.py
