[metadata]
name = chat_sphere
version = 0.1.0
description = ChatSphere is a modern, asynchronous chat application designed to facilitate real-time communication between users.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alex-skovorodnikov/chat_sphere
author = Aleksey Skovorodnikov
author_email = alexskovorodnikov@yandex.ru

[flake8]
max-line-length = 120
extended-ignore = E203, E266, E501, W503
count = true
select = E,F,W,B,B902,B950,B903,B904,B951,B905,B906,B907,B908
